docs: update daily report with detailed progress and future plans
Signed-off-by: exceed-zk <18269890328@139.com>